--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -16,12 +16,19 @@ body {
   font-weight: 700;
 }
 
+.footer {
+  padding-top: 20px;
+  padding-bottom: 20px;
+  background-color: #f7f7f7;
+}
+
 .wrap {
   width: 100%;
   max-width: 1180px;
   margin: 0 auto;
   padding-left: 15px;
   padding-right: 15px;
+  box-sizing: border-box;
 }
 
 .nav {
@@ -69,11 +76,133 @@ body {
   color: #202020;
 }
 
+.title-main {
+  font-size: 56px;
+  font-weight: 700;
+  color: #202020;
+}
+
+.text-main {
+  font-size: 32px;
+  line-height: 51px;
+  color: #4f4f4f;
+}
+
+.button {
+  background-color: #5528ff;
+  border-radius: 10px;
+  padding: 10px 45px;
+  color: #fff;
+  border: none;
+  font-size: 24px;
+}
+
 .page {
   padding-top: 40px;
   padding-bottom: 40px;
+  position: relative;
 }
 
 .page-top {
   border-top: 1px solid #c2c2c2;
+}
+
+.page h2 {
+  position: absolute;
+  top: -24px;
+  font-size: 14px;
+  font-weight: 300;
+  background-color: #fff;
+  padding: 5px 15px;
+  color: #c2c2c2;
+}
+
+.services {
+  display: grid;
+  grid-template: 1fr 1fr / 1fr 1fr;
+}
+
+.services-item {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+}
+
+.services_img {
+  flex-basis: 120px;
+  text-align: center;
+}
+
+.services_text {
+  flex-basis: calc(100% - 100px);
+}
+
+.services h3 {
+  font-size: 28px;
+  font-weight: 400;
+}
+
+.services p {
+  font-size: 14px;
+  font-weight: 100;
+  color: #b2b2b2;
+  line-height: 1.5;
+}
+
+.clients {
+  display: grid;
+  grid-template: repeat(2, 1fr) / repeat(4, 1fr);
+  text-align: center;
+  grid-row-gap: 40px;
+}
+
+.team {
+  display: grid;
+  grid-template: repeat(3, 1fr) / repeat(3, 1fr);
+  grid-row-gap: 40px;
+}
+
+.team-item {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+}
+
+.team-item > div {
+  flex-basis: calc(100% - 120px);
+}
+
+.team-item img {
+  width: 100px;
+  height: 100px;
+  margin-right: 20px;
+}
+
+.box-footer {
+  display: flex;
+  justify-content: space-beetwen;
+  align-items: center;
+}
+
+.box-footer {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.social {
+  list-style-type: none;
+  padding-left: 0;
+  display: flex;
+}
+
+.social > li {
+  margin-left: 15px;
+}
+
+.social > li > a {
+  text-decoration: none;
+  color: #b2b2b2;
+  font-size: 24px;
+  margin-left: 15px;
 }
